# schemars-client-gen

./: .gitignore  Cargo.toml  out.json  out.ts  sse.ts
src/: base-client-1.ts  base-client.ts  deprecated.rs  gen.rs  keywords.rs  lib.rs  main.rs  method.rs  types.rs  typescript_client.rs
src/base/: client.ts  sse.ts
src/typescript_client/: function.rs  misc.rs  mod.rs  types.rs
src/typescript_client/base/: client.ts  sse.ts  websocket.ts
