[package]
name = "schemars-client-gen"
version = "0.8.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
schemars = { git = "https://github.com/s-fabian/schemars", features = ["bigdecimal04", "impl_json_schema", "uuid1", "chrono"] }
schemars-to-zod = { git = "https://github.com/s-fabian/schemars-to-zod", features = ["pretty", "inner"], optional = true }
actix-web = { version = "4", optional = true }
clap = { version = "4.5", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[features]
actix-web = ["dep:actix-web"]
client-gen = ["dep:schemars-to-zod"]
binary = ["dep:clap", "dep:serde_json", "client-gen"]
add-undefined = []
keep-datestring = []

[patch.crates-io]
schemars = { git = "https://github.com/s-fabian/schemars" }
